2013-01-05  Russ Allbery  <rra@stanford.edu>

	* lib/Pod/Thread.pm (handle_code): Fix the regex match that tries
	to find CVS Id strings.
	(start_document): Avoid warnings from PerlIO layer detection when
	the output isn't a file handle.
	* scripts/pod2thread: Update coding style and formatting.
	* t/basic.t: Likewise.
	* t/critic.t: New test of coding style in all Perl code.
	* t/data/perlcriticrc: Test configuration for perlcritic.
	* t/data/perltidyrc: Test configuration for perltidy.

	* Makefile.PL: Remove conditionals on Perl 5.005, since Perl 5.8
	is now required.  Use angle brackets around my email address.
	Update coding style and formatting.

	* scripts/pod2thread: Remove the code to generate the #! line and
	supporting code and instead rely on ExtUtils::MakeMaker to handle
	that during package build.
	* scripts/pod2thread.PL: Renamed to pod2thread.
	* Makefile.PL: Remove PL_FILES and realclean.

	* lib/Pod/Thread.pm: Largely rewritten to use Pod::Simple and to
	update the coding style.  Now also requires the Readonly module.
	* t/basic.t: Parsers can no longer be used for more than one
	document.
	* Makefile.PL: Add Readonly to prerequisites and replace
	Pod::Parser with Pod::Simple.

2013-01-04  Russ Allbery  <rra@stanford.edu>

	* t/pod.t: New test for POD syntax.
	* t/pod-spelling.t: New test for spelling in POD documentation.
	* lib/Pod/Thread.pm: Add stopwords.
	* scripts/pod2thread.PL: Likewise.

	* lib/Pod/Thread.pm (seq_l): Only add angle brackets around a URL
	if there was no anchor text.
	* t/basic.t: Test URL rendering with and without anchor text.

2009-01-25  Russ Allbery  <rra@stanford.edu>

	* VERSION: Pod::Thread 0.12 released.

	* lib/Pod/Thread.pm (output): Print saved whitespace to the thread
	output as intended instead of to standard output.

	* lib/Pod/Thread.pm (cmd_item): Don't treat =item 0 as a bullet.
	Also improve the coding style.
	* t/basic.t: New file.  Add test suite framework and test the
	=item 0 fix.
